--- a/crm_claim_rma/views/account_invoice.xml
+++ b/crm_claim_rma/views/account_invoice.xml
@@ -10,9 +10,9 @@
             <field eval="16" name="priority"/>
             <field name="arch" type="xml">
                 <data>
-                    <xpath expr="/form/sheet/notebook/page[@string='Other Info']/group/group/field[@name='origin']" position="after">
+                    <field name='origin' position="after">
                         <field name="claim_id" attrs="{'invisible':[('type','!=','out_refund')]}"/>
-                    </xpath>
+                    </field>
                 </data>
             </field>
         </record>
