--- a/crm_rma_stock_location/views/crm_claim.xml
+++ b/crm_rma_stock_location/views/crm_claim.xml
@@ -6,13 +6,12 @@
             <field name="model">crm.claim</field>
             <field name="inherit_id" ref="crm_claim_rma.crm_claim_rma_form_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//button[@string='New Delivery']" position="after">
+                <button name="%(crm_claim_rma.action_claim_picking_in)d" position="after">
                     <button name="%(action_claim_picking_loss)d"
-                                    string="New Product Loss"
-                                    type="action" target="new"
-                                    context="{'warehouse_id': warehouse_id,
-                                        'partner_id': partner_id}"/>
-                </xpath>
+                            string="New Product Loss"
+                            type="action" target="new"
+                            context="{'warehouse_id': warehouse_id, 'partner_id': partner_id}"/>
+                </button>
             </field>
         </record>
     </data>
